--- a/ProjectManagement/src/main/resources/templates/scrum_board.html
+++ b/ProjectManagement/src/main/resources/templates/scrum_board.html
@@ -177,7 +177,7 @@
     </div>
   </div>
 
-  <!-- group detail modal -->
+  <!-- group detail modal to do  row -->
   <div class="modal fade" id="modal_taskdetail" tabindex="-1" aria-labelledby="modal_taskdetail" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -190,11 +190,56 @@
         
         </div>
         <div class="modal-footer">
-          
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancle</button>
-          <button type="button" class="btn btn-primary" onclick="changestatetoToDo()" >ToDo</button>
+          <button type="button" class="btn btn-primary" onclick="changestatetoToDo()" >To Do</button>
           <button type="button" class="btn btn-primary" onclick="changestatetoDoing()" >Doing</button>
-          <button type="button" class="btn btn-primary" onclick="changestatetoChecking()" >checking</button>
+          <button type="button" class="btn btn-primary" onclick="changestatetoChecking()" >Checking</button>
+          <button type="button" class="btn btn-primary" onclick="changestatetoDone()" >Done</button>
+          
+
+
+        </div>
+      </div>
+    </div>
+  </div>
+<!-- end -->
+    
+    
+
+<!-- END MODAL ZONEEEE -->
+<!-- prepare modal zone -->
+<div class="modal fade" id="modal_taskdetaildoing" tabindex="-1" aria-labelledby="modal_taskdetaildoing" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal_taskdetailLabel">task details</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+        <!-- task detail from js func -->
+        
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" onclick="changestatetoToDo()" >To Do</button>
+          <button type="button" class="btn btn-primary" onclick="changestatetoChecking()" >Checking</button>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="modal_taskdetailchecking" tabindex="-1" aria-labelledby="modal_taskdetailchecking" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal_taskdetailLabel">task details</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+        <!-- task detail from js func -->
+        
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" onclick="changestatetoToDo()" >To Do</button>
           <button type="button" class="btn btn-primary" onclick="changestatetoDone()" >Done</button>
 
         </div>
@@ -202,17 +247,37 @@
     </div>
   </div>
 
-    
-    
-
-<!-- END MODAL ZONEEEE -->
-
-
-
+  <div class="modal fade" id="modal_taskdetaildone" tabindex="-1" aria-labelledby="modal_taskdetaildone" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal_taskdetailLabel">task details</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+        <!-- task detail from js func -->
+        
+        </div>
+        <div class="modal-footer">
+            <!-- ใส่Todoเฉยๆ -->
+          <button type="button" class="btn btn-primary" onclick="changestatetoToDo()" >To Do</button>
+        </div>
+      </div>
+    </div>
+  </div>
+<!-- end! -->
 <script>
 var filename = window.location.pathname.split("/").pop();
 $(document).ready(function () {
     getSideBar();
+});
+$(document).ready(function() {
+    let documentId = localStorage.getItem('documentId');
+    if (documentId) {
+        getScrumboardreload(documentId);
+        // Clear the documentId from localStorage
+        localStorage.removeItem('documentId');
+    }
 });
 
 
@@ -268,7 +333,39 @@ function getTaskDetail(taskName, deadline, member, description) {
         '<p>Deadline: ' + deadline + '</p>' +
         '<p>Member: ' + member + '</p>' +
         '<p>Description: ' + description + '</p>' +
-        '<input type="hidden" id="taskdoc_id" th:value="${task.documentId}">' 
+        '<input type="hidden" id="taskdoc_id" th:value="${task.documentId}">' +
+        '<button type="button" class="btn btn-danger" onclick="deleteTask()" >Delete Task </button>'
+    );
+}
+function getTaskDetaildoing(taskName, deadline, member, description) {
+    $('#modal_taskdetaildoing .modal-body').html(
+        '<h3>Task Name: ' + taskName + '</h3>' +
+        '<p>Deadline: ' + deadline + '</p>' +
+        '<p>Member: ' + member + '</p>' +
+        '<p>Description: ' + description + '</p>' +
+        '<input type="hidden" id="taskdoc_id" th:value="${task.documentId}">' +
+        '<button type="button" class="btn btn-danger" onclick="deleteTask()" >Delete Task </button>'
+        
+    );
+}
+function getTaskDetailchecking(taskName, deadline, member, description) {
+    $('#modal_taskdetailchecking .modal-body').html(
+        '<h3>Task Name: ' + taskName + '</h3>' +
+        '<p>Deadline: ' + deadline + '</p>' +
+        '<p>Member: ' + member + '</p>' +
+        '<p>Description: ' + description + '</p>' +
+        '<input type="hidden" id="taskdoc_id" th:value="${task.documentId}">' +
+        '<button type="button" class="btn btn-danger" onclick="deleteTask()" >Delete Task </button>'
+    );
+}
+function getTaskDetaildone(taskName, deadline, member, description) {
+    $('#modal_taskdetaildone .modal-body').html(
+        '<h3>Task Name: ' + taskName + '</h3>' +
+        '<p>Deadline: ' + deadline + '</p>' +
+        '<p>Member: ' + member + '</p>' +
+        '<p>Description: ' + description + '</p>' +
+        '<input type="hidden" id="taskdoc_id" th:value="${task.documentId}">' +
+        '<button type="button" class="btn btn-danger" onclick="deleteTask()" >Delete Task </button>'
     );
 }
 
@@ -308,7 +405,7 @@ $(document).ready(function() {
             console.log("Returned tasks: ", tasks); // Log the returned tasks
             for (let i = 0; i < tasks.length; i++) {
                 let task = tasks[i];
-                let taskElement = '<button class="task" data-bs-toggle="modal" data-bs-target="#modal_taskdetail" onclick="getTaskDetail(\'' + task.taskName + '\', \'' + task.deadline + '\', \'' + task.member + '\', \'' + task.description + '\')">' +
+                let taskElement = '<button class="task" data-bs-toggle="modal" data-bs-target="#modal_taskdetaildone" onclick="getTaskDetaildone(\'' + task.taskName + '\', \'' + task.deadline + '\', \'' + task.member + '\', \'' + task.description + '\')">' +
                     '<input type="hidden" id="taskdoc_id" value="' + task.documentId + '">' +              
                     '<h3>' + task.taskName + '</h3>' +
                                   '<p>' + task.deadline + '</p>' +
@@ -333,13 +430,13 @@ $(document).ready(function() {
             console.log("Returned tasks: ", tasks); // Log the returned tasks
             for (let i = 0; i < tasks.length; i++) {
                 let task = tasks[i];
-                let taskElement = '<button class="task" data-bs-toggle="modal" data-bs-target="#modal_taskdetail" onclick="getTaskDetail(\'' + task.taskName + '\', \'' + task.deadline + '\', \'' + task.member + '\', \'' + task.description + '\')">' +
+                let taskElement = '<button class="task" data-bs-toggle="modal" data-bs-target="#modal_taskdetailchecking" onclick="getTaskDetailchecking(\'' + task.taskName + '\', \'' + task.deadline + '\', \'' + task.member + '\', \'' + task.description + '\')">' +
                     '<input type="hidden" id="taskdoc_id" value="' + task.documentId + '">' +
                                     '<h3>' + task.taskName + '</h3>' +
                                   '<p>' + task.deadline + '</p>' +
                                   '<p>' + task.member + '</p>' +
                                   '</button>';
-                $('#doingtask').append(taskElement);
+                $('#checkingtask').append(taskElement);
             }
         },
         error: function(jqXHR, textStatus, errorThrown) {
@@ -358,7 +455,7 @@ $(document).ready(function() {
             console.log("Returned tasks: ", tasks); // Log the returned tasks
             for (let i = 0; i < tasks.length; i++) {
                 let task = tasks[i];
-                let taskElement = '<button class="task" data-bs-toggle="modal" data-bs-target="#modal_taskdetail" onclick="getTaskDetail(\'' + task.taskName + '\', \'' + task.deadline + '\', \'' + task.member + '\', \'' + task.description + '\')">' +
+                let taskElement = '<button class="task" data-bs-toggle="modal" data-bs-target="#modal_taskdetaildoing" onclick="getTaskDetaildoing(\'' + task.taskName + '\', \'' + task.deadline + '\', \'' + task.member + '\', \'' + task.description + '\')">' +
                     '<input type="hidden" id="taskdoc_id" value="' + task.documentId + '">' +              
                     '<h3>' + task.taskName + '</h3>' +
                                   '<p>' + task.deadline + '</p>' +
@@ -373,7 +470,7 @@ $(document).ready(function() {
     });
 });
 
-
+// Change task status 
 
 
 function changestatetoDone(){
@@ -390,7 +487,10 @@ function changestatetoDone(){
     },
         success: function(tasks) {
             console.log("Returned tasks: ", tasks); // Log the returned tasks
-            location.reload();
+            localStorage.setItem('documentId', documentId);
+            location.reload(); // Reload the page
+            alert('Change Task to Done success.');
+            $('#modal_taskdetail').modal('hide');
         },
         error: function(jqXHR, textStatus, errorThrown) {
             console.log("AJAX error: ", textStatus, errorThrown); // Log any AJAX errors
@@ -411,7 +511,10 @@ function changestatetoDoing(){
     },
         success: function(tasks) {
             console.log("Returned tasks: ", tasks); // Log the returned tasks
-            location.reload();
+            localStorage.setItem('documentId', documentId);
+            location.reload(); // Reload the page
+            alert('Change Task to Doing success.');
+            $('#modal_taskdetail').modal('hide');
         },
         error: function(jqXHR, textStatus, errorThrown) {
             console.log("AJAX error: ", textStatus, errorThrown); // Log any AJAX errors
@@ -432,7 +535,10 @@ function changestatetoChecking(){
     },
         success: function(tasks) {
             console.log("Returned tasks: ", tasks); // Log the returned tasks
-            location.reload();
+            localStorage.setItem('documentId', documentId);
+            location.reload(); // Reload the page
+            alert('Change Task to Checking success.');
+            $('#modal_taskdetail').modal('hide');
         },
         error: function(jqXHR, textStatus, errorThrown) {
             console.log("AJAX error: ", textStatus, errorThrown); // Log any AJAX errors
@@ -453,7 +559,34 @@ function changestatetoToDo(){
     },
         success: function(tasks) {
             console.log("Returned tasks: ", tasks); // Log the returned tasks
-            location.reload();
+            localStorage.setItem('documentId', documentId);
+            location.reload(); // Reload the page
+            alert('Change Task to To Do success.');
+            $('#modal_taskdetail').modal('hide');
+        },
+        error: function(jqXHR, textStatus, errorThrown) {
+            console.log("AJAX error: ", textStatus, errorThrown); // Log any AJAX errors
+        }
+    });
+}
+function deleteTask(){
+    let taskdoc_Id = $('#taskdoc_id').val();
+    let documentId = $('#doc_id').val(); //
+    console.log("doc_id: " + documentId)
+    console.log("taskdoc_id: " + taskdoc_Id)
+    $.ajax({
+        url: "/deleteTask",
+        type: "POST",
+        data: { 
+        taskdoc_Id : taskdoc_Id,
+        documentId : documentId  
+    },
+        success: function(tasks) {
+            console.log("Returned tasks: ", tasks); // Log the returned tasks
+            localStorage.setItem('documentId', documentId);
+            location.reload(); // Reload the page
+            alert('Delete Task success.');
+            $('#modal_taskdetail').modal('hide');
         },
         error: function(jqXHR, textStatus, errorThrown) {
             console.log("AJAX error: ", textStatus, errorThrown); // Log any AJAX errors
