--- a/ProjectManagement/src/main/resources/templates/mygroup.html
+++ b/ProjectManagement/src/main/resources/templates/mygroup.html
@@ -14,6 +14,7 @@
     <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
     <link href="/styles.css" rel="stylesheet"  type="text/css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <title>My Group</title>
     <style>
         .btn-group {
@@ -110,7 +111,6 @@
         console.log("docId: " + docId)
         $.ajax({
             url: "/groupdetail",
-            type: "GET",
             data: {documentId: docId},
             success: function (data) {
                 //get data specific detail
