--- a/ProjectManagement/src/main/resources/templates/myproject.html
+++ b/ProjectManagement/src/main/resources/templates/myproject.html
@@ -31,6 +31,19 @@
             font-size: 14px;
             border: none;
         }
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            padding-top: 100px;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0,0,0);
+            background-color: rgba(0,0,0,0.4); /* <-- this is the culprit */
+}
     </style>
 </head>
 <body>
