Add group request validation and fix minor issues

--- a/ProjectManagement/src/main/resources/templates/createsubject.html
+++ b/ProjectManagement/src/main/resources/templates/createsubject.html
@@ -196,8 +196,13 @@
                                                         placeholder="Enter subject ID" required>
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="subjectName" class="form-label">Subject Name</label>
-                                                    <input type="text" class="form-control" id="subjectName" name="subjectName"
+                                                    <label for="term" class="form-label">Subject Name</label>
+                                                    <input type="text" class="form-control" id="term" name="term"
+                                                        placeholder="Enter term" required>
+                                                </div>
+                                                <div class="mb-3">
+                                                    <label for="section" class="form-label">Subject Name</label>
+                                                    <input type="text" class="form-control" id="section" name="section"
                                                         placeholder="Enter subject name" required>
                                                 </div>
                                                 <div class="modal-footer">
