--- a/ProjectManagement/src/main/resources/templates/groupdetail.html
+++ b/ProjectManagement/src/main/resources/templates/groupdetail.html
@@ -138,7 +138,7 @@
         let documentId = $(element).next().text();
         let groupId = $('#docId').text();
         let text = $(element).text();
-        $('#exampleModalToggleLabel2').text("Set role for "+text);
+        $('#exampleModalToggleLabel2').text("Set role for "+text + " or delete from this group ");
         console.log(documentId);
         //open modal
         $('#modalSetrole').modal('show');
