--- a/ProjectManagement/src/main/resources/templates/groupDetailFragment.html
+++ b/ProjectManagement/src/main/resources/templates/groupDetailFragment.html
@@ -3,7 +3,7 @@
         <td><span th:text="${groupde.groupName}"></span></td>
         <td>Subject ID<span th:text="${groupde.subject.subjectID}"></span></td>
         <td>Member<span th:text="${groupde.joinedMember}"></span></td>
-        <td>Section<span th:text="${groupde.section}"></span></td>
+        <td>Term<span th:text="${groupde.section}"></span></td>
         <td><span th:text="${groupde.groupOwner}"></span></td>
         <td>Group Member<span th:text="${groupde.joinedMember}+'/'+${groupde.maxMember}"></span></td>
         <td>
