--- a/ProjectManagement/src/main/resources/templates/groupdetail.html
+++ b/ProjectManagement/src/main/resources/templates/groupdetail.html
@@ -17,7 +17,7 @@
                     <p style="font-size: larger;"><strong>Subject ID:</strong> <span th:text="${group['subjectID']} + ' ' + ${group.subject.subjectName}"></span></p>
                 </div>
                 <div class="col-3">
-                    <p style="font-size: larger;"><strong>Section:</strong><span th:text="${group.section}"></span></p>
+                    <p style="font-size: larger;"><strong>Term:</strong><span th:text="${group.section}"></span></p>
                 </div>
                 <div class="col">
                     <div class="row mb-5"></div>
