--- a/ProjectManagement/src/main/resources/templates/createsubject.html
+++ b/ProjectManagement/src/main/resources/templates/createsubject.html
@@ -11,13 +11,14 @@
     <script src="jquery-3.7.1.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
 
     <script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
     <title>Import File To Create New User</title>
     <style>
@@ -168,32 +169,38 @@
                                 <div class="header">
                                 </div>
                                 <div class="search" style="display: flex;">
-                                    <input type="text" class="form-control" style="margin-right: 10px;" id="subjectIDInput"
-                                        placeholder="SubjectID">
-                                    <input type="text" class="form-control" style="margin-right: 10px;" id="subjectNameInput"
-                                        placeholder="SubjectName">
+                                    <input type="text" class="form-control" style="margin-right: 10px;"
+                                        id="subjectIDInput" placeholder="SubjectID">
+                                    <input type="text" class="form-control" style="margin-right: 10px;"
+                                        id="subjectNameInput" placeholder="SubjectName">
                                     <button class="btn btn-success" onclick="searchSubjects()">Search</button>
                                 </div>
                             </div>
                             <div class="add-user mt-3">
                                 <button class="btn btn-primary" data-bs-toggle="modal"
                                     data-bs-target="#addSubjectModal">Add Subject</button>
+                                <button class="btn btn-success" id="addTermBtn">Add New Term</button>
+                                <p id="termDisplay" class="mt-2">Current Term: <span id="currentTerm"></span></p>
+
                             </div>
+
                             <!-- Add Subject Modal -->
-                            <div class="modal fade" id="addSubjectModal" tabindex="-1" aria-labelledby="addSubjectModalLabel"
-                                aria-hidden="true">
+                            <div class="modal fade" id="addSubjectModal" tabindex="-1"
+                                aria-labelledby="addSubjectModalLabel" aria-hidden="true">
                                 <div class="modal-dialog">
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <h5 class="modal-title" id="addSubjectModalLabel">Add Subject</h5>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
                                         </div>
-                                        <form th:action="@{/addsubject}" method="post" onsubmit="return validateSubjectForm()">
+                                        <form th:action="@{/addsubject}" method="post"
+                                            onsubmit="return validateSubjectForm()">
                                             <div class="modal-body">
                                                 <div class="mb-3">
                                                     <label for="subjectID" class="form-label">Subject ID</label>
-                                                    <input type="text" class="form-control" id="subjectID" name="subjectID"
-                                                        placeholder="Enter subject ID" required>
+                                                    <input type="text" class="form-control" id="subjectID"
+                                                        name="subjectID" placeholder="Enter subject ID" required>
                                                 </div>
                                                 <div class="mb-3">
                                                     <label for="term" class="form-label">Subject Name</label>
@@ -206,7 +213,8 @@
                                                         placeholder="Enter subject name" required>
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                    <button type="button" class="btn btn-secondary"
+                                                        data-bs-dismiss="modal">Close</button>
                                                     <button type="submit" class="btn btn-primary">Save</button>
                                                 </div>
                                             </div>
@@ -214,90 +222,91 @@
                                     </div>
                                 </div>
                             </div>
-                            </div>
-                            </div>
-                            </div>
-            <div class="modal fade" id="deleteSubjectModal" tabindex="-1" aria-labelledby="deleteUserModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="deleteUserModalLabel">Delete Subject</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <p>Are you sure you want to delete this subject?</p>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                            <button type="button" id="modal_btn_del" class="btn btn-danger"
-                               >Delete</button>
                         </div>
                     </div>
                 </div>
-            </div>
-            
-            <!-- FILEPATH: /c:/Users/Mayme/Downloads/OOP-20240108T134845Z-001/OOP/ProjectManagement/src/main/resources/templates/createsubject.html -->
+                <div class="modal fade" id="deleteSubjectModal" tabindex="-1" aria-labelledby="deleteUserModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="deleteUserModalLabel">Delete Subject</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p>Are you sure you want to delete this subject?</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <button type="button" id="modal_btn_del" class="btn btn-danger">Delete</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-            <div class="p-3" style="width: 100%;  background-color: white;border-radius: 10px;">
-                <table class="table table-striped">
-                    <thead>
-                        <tr class="bg-light">
-                            <!-- Change "studentId" to "username" and update other column names accordingly -->
-                            <th>Subject ID</th>
-                            <th>Subject Name</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody class="bg-white">
-                        <tr th:each="user : ${users}">
-                            <!-- Use correct attribute names from "useraccount" collection -->
-                            <td th:text="${user['subjectID']}"></td>
-                            <td th:text="${user['subjectName']}"></td>
+                <!-- FILEPATH: /c:/Users/Mayme/Downloads/OOP-20240108T134845Z-001/OOP/ProjectManagement/src/main/resources/templates/createsubject.html -->
 
-                            <td>
-                                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-                                    data-bs-target="#deleteSubjectModal" onclick="setUsernameForDeleteUserModal(this)">
-                                    Delete
-                                </button>
-                            </td>
-                        </tr>
-                        <!-- Add more rows here -->
-                    </tbody>
-                </table>
+                <div class="p-3" style="width: 100%;  background-color: white;border-radius: 10px;">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr class="bg-light">
+                                <!-- Change "studentId" to "username" and update other column names accordingly -->
+                                <th>Subject ID</th>
+                                <th>Subject Name</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody class="bg-white">
+                            <tr th:each="user : ${users}">
+                                <!-- Use correct attribute names from "useraccount" collection -->
+                                <td th:text="${user['subjectID']}"></td>
+                                <td th:text="${user['subjectName']}"></td>
+
+                                <td>
+                                    <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                        data-bs-target="#deleteSubjectModal"
+                                        onclick="setUsernameForDeleteUserModal(this)">
+                                        Delete
+                                    </button>
+                                </td>
+                            </tr>
+                            <!-- Add more rows here -->
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
-    </div>
 
     <script>
-    function validateSubjectForm() {
-        var subjectId = document.getElementById('subjectID').value;
-        var subjectName = document.getElementById('subjectName').value;
+        function validateSubjectForm() {
+            var subjectId = document.getElementById('subjectID').value;
+            var subjectName = document.getElementById('subjectName').value;
 
-        if (!subjectId || !subjectName) {
-            alert('All fields are required!');
-            return false;
+            if (!subjectId || !subjectName) {
+                alert('All fields are required!');
+                return false;
+            }
+
+            var subjectIdPattern = /^\d{7}$/;
+            if (!subjectIdPattern.test(subjectId)) {
+                alert('Subject ID must be 7 digits.');
+                return false;
+            }
+
+            var subjectNamePattern = /^[A-Za-z\s]+$/;
+            if (!subjectNamePattern.test(subjectName)) {
+                alert('Subject Name must contain only English letters.');
+                return false;
+            }
+
+            return true;
         }
-
-        var subjectIdPattern = /^\d{7}$/;
-        if (!subjectIdPattern.test(subjectId)) {
-            alert('Subject ID must be 7 digits.');
-            return false;
-        }
-
-        var subjectNamePattern = /^[A-Za-z\s]+$/;
-        if (!subjectNamePattern.test(subjectName)) {
-            alert('Subject Name must contain only English letters.');
-            return false;
-        }
-
-        return true;
-    }
     </script>
     <script th:inline="javascript">
         /*<![CDATA[*/
-        $(document).ready(function() {
+        $(document).ready(function () {
             // Check if the table exists
             if ($('.table').length) {
                 // Initialize DataTable
@@ -331,7 +340,66 @@
         }
         /*]]>*/
     </script>
+    <script>
+        $(document).ready(function () {
+            $('#addTermBtn').click(function () {
+                addNewTermFunction();
+            });
+            getTerm();
+        });
+        var currentTerm = document.getElementById('currentTerm').innerText;
+        // split the term to get the year and semester
 
+        var nextTerm;
+        document.getElementById('term').value = nextTerm;
+        function addNewTermFunction() {
+            $.ajax({
+                url: "/addNewTerm",
+                type: "POST",
+                data: {
+                    term: nextTerm,
+                },
+                success: function (response) {
+                    console.log(response);
+                    if (response == "success") {
+                        alert('New term added!');
+                        location.reload();
+                    } else {
+                        alert('Error adding new term: ' + response.message);
+                    }
+                   
+                   
+                },
+                error: function (xhr) {
+                    console.log(xhr);
+                    alert('Error adding new term: ' + xhr.responseText);
+                }
+            });
+        }
+
+        function getTerm() {
+            $.ajax({
+                url: "/getTerm",
+                type: "GET",
+                success: function (response) {
+                    console.log(response);
+                    $('#currentTerm').text(response);
+                    var currentTermSplit = response.split('/');
+                    var currentYear = currentTermSplit[1];
+                    var currentSemester = currentTermSplit[0];
+                    console.log(currentSemester , currentYear);
+                    var nextSemester = currentSemester === '1' ? '2' : currentSemester === '2' ? '3' : '1';
+                    var nextYear = currentSemester === '1' ? currentYear : currentSemester === '2' ? currentYear : parseInt(currentYear) + 1;
+                    nextTerm = `${nextSemester}/${nextYear}`;
+                    console.log(nextTerm);
+                },
+                error: function (xhr) {
+                    console.log(xhr);
+                    alert('Error adding new term: ' + xhr.responseText);
+                }
+            });
+        }
+    </script>
     <script>
         function setUsernameForDeleteUserModal(element) {
             $(element).parent().each(function () {
@@ -343,26 +411,26 @@
         }
 
         function searchSubjects() {
-        // Get the values from the input fields
-        var subjectID = document.getElementById('subjectIDInput').value.trim().toLowerCase();
-        var subjectName = document.getElementById('subjectNameInput').value.trim().toLowerCase();
+            // Get the values from the input fields
+            var subjectID = document.getElementById('subjectIDInput').value.trim().toLowerCase();
+            var subjectName = document.getElementById('subjectNameInput').value.trim().toLowerCase();
 
-        // Get all rows in the table
-        var rows = document.querySelectorAll('tbody tr');
+            // Get all rows in the table
+            var rows = document.querySelectorAll('tbody tr');
 
-        // Loop through each row and check if it matches the search criteria
-        rows.forEach(function (row) {
-            var rowSubjectID = row.querySelector('td:nth-child(1)').innerText.trim().toLowerCase();
-            var rowSubjectName = row.querySelector('td:nth-child(2)').innerText.trim().toLowerCase();
+            // Loop through each row and check if it matches the search criteria
+            rows.forEach(function (row) {
+                var rowSubjectID = row.querySelector('td:nth-child(1)').innerText.trim().toLowerCase();
+                var rowSubjectName = row.querySelector('td:nth-child(2)').innerText.trim().toLowerCase();
 
-            // Check if the row matches the search criteria
-            var matchSubjectID = rowSubjectID.includes(subjectID);
-            var matchSubjectName = rowSubjectName.includes(subjectName);
+                // Check if the row matches the search criteria
+                var matchSubjectID = rowSubjectID.includes(subjectID);
+                var matchSubjectName = rowSubjectName.includes(subjectName);
 
-            // Show/hide the row based on the search criteria
-            row.style.display = (matchSubjectID && matchSubjectName) ? '' : 'none';
-        });
-    }
+                // Show/hide the row based on the search criteria
+                row.style.display = (matchSubjectID && matchSubjectName) ? '' : 'none';
+            });
+        }
     </script>
 
 </body>
